review chages: fix dl icon + fix form sidebar on scroll

--- a/styles/app/layout/main.module.css
+++ b/styles/app/layout/main.module.css
@@ -41,13 +41,16 @@
 		}
 	}
 
-	.navigationSidebar {
+	.navigationSidebar,
+	.formSidebar {
 		position: sticky;
 		top: 1rem;
 		height: max-content;
 		width: max-content;
 		z-index: 10;
+	}
 
+	.navigationSidebar {
 		.folded {
 			max-width: 110px;
 			min-width: 110px;
