review changes: set section for hero

--- a/styles/app/common/buttons.module.css
+++ b/styles/app/common/buttons.module.css
@@ -40,6 +40,7 @@
 		width: max-content;
 		margin: 1rem auto;
 		color: var(--color-text);
+		transition: all 0.3s ease;
 
 		&::after {
 			content: '';
