--- a/styles/app/common/buttons.module.css
+++ b/styles/app/common/buttons.module.css
@@ -1,35 +1,57 @@
-.primaryButton,
-.secondaryButton {
-	position: relative;
-	width: 100%;
-	margin-top: 1rem;
-	padding: 0.5rem 1rem;
-	border-radius: 0.5rem;
-	transition: all 0.3s ease;
-}
+.btn {
+	&Primary {
+		width: 100%;
+		color: var(--color-btn-text);
+		background: var(--color-primary);
+		font-size: 1rem;
+		font-weight: 700;
 
-.primaryButton {
-	color: var(--color-btn-text);
-	background: var(--color-primary);
-	border: 3px solid transparent;
-	font-size: 1.25rem;
-	font-weight: 700;
-
-	&:hover {
-		background: var(--color-btn-background);
-		border: 3px solid var(--color-btn-background);
+		&:hover {
+			background: var(--color-btn-background);
+			border: 3px solid var(--color-btn-background);
+		}
 	}
-}
 
-.secondaryButton {
-	color: var(--color-link);
-	background: var(--color-background);
-	border: 3px solid var(--color-link);
-	font-size: 1rem;
-	font-weight: 700;
+	&Secondary {
+		width: 100%;
+		color: var(--color-link);
+		background: var(--color-background);
+		border: 3px solid var(--color-link);
+		font-size: 1rem;
+		font-weight: 700;
 
-	&:hover {
-		background: var(--switch-background);
+		&:hover {
+			background: var(--switch-background);
+			color: var(--color-text);
+		}
+	}
+
+	&Text {
+		font-weight: 600;
+		padding: 0 1rem;
+		width: max-content;
+		margin: 1rem auto;
 		color: var(--color-text);
+
+		&::after {
+			content: '';
+			position: absolute;
+			width: 80%;
+			height: 2px;
+			left: 50%;
+			bottom: -5px;
+			transform: translateX(-50%);
+			border-radius: 50px;
+			background: var(--color-text);
+			transition: all 0.3s ease;
+		}
+
+		&:hover {
+			color: var(--color-link);
+
+			&::after {
+				background: var(--color-link);
+			}
+		}
 	}
 }
