--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@
 	--purple-500: #5a189a;
 	--purple-600: #3c096c;
 	--purple-700: #240046;
+	--purple-850: #19003b;
 	--purple-800: #10002b;
 	--purple-900: #0e001c;
 	/* Grey variants */
@@ -62,7 +63,20 @@
 		)
 		1;
 
-	--card-gradient-angle: 0deg;
+	--card-border: var(--purple-700);
+	--card-border-hover: conic-gradient(
+		var(--purple-500),
+		var(--purple-600),
+		var(--purple-700),
+		var(--purple-600),
+		var(--purple-500),
+		var(--purple-600),
+		var(--purple-700),
+		var(--purple-600),
+		var(--purple-500)
+	);
+	--card-background: var(--purple-800);
+	--card-background-hover: var(--purple-850);
 }
 
 [data-theme='light'] {
@@ -86,6 +100,21 @@
 	--switch-border: var(--grey-100);
 
 	--color-logo: var(--purple-600);
+
+	--card-border: var(--grey-50);
+	--card-border-hover: conic-gradient(
+		var(--purple-100),
+		var(--purple-50),
+		#fff,
+		var(--purple-50),
+		var(--purple-100),
+		var(--purple-50),
+		#fff,
+		var(--purple-50),
+		var(--purple-100)
+	);
+	--card-background: white;
+	--card-background-hover: white;
 }
 
 * {
