updated card styles and fix some layout styles

--- a/styles/app/common/card.module.css
+++ b/styles/app/common/card.module.css
@@ -1,9 +1,9 @@
 @keyframes gradient-rotate {
 	from {
-		transform: rotate(0deg);
+		transform: rotate(0deg) scale(2);
 	}
 	to {
-		transform: rotate(360deg);
+		transform: rotate(360deg) scale(2);
 	}
 }
 
@@ -68,6 +68,18 @@
 		.border {
 			opacity: 1;
 			animation: gradient-rotate 4s linear infinite;
+		}
+	}
+
+	&.filled {
+		&::after {
+			background: var(--grey-10);
+		}
+
+		&:hover {
+			&::after {
+				background: var(--card-background-hover);
+			}
 		}
 	}
 }
