--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,7 @@
 	--purple-800: #10002b;
 	--purple-900: #0e001c;
 	/* Grey variants */
+	--grey-10: #f3f3f3;
 	--grey-50: #eaeaea;
 	--grey-100: #bab6be;
 	--grey-500: #565656;
