add partners section

--- a/styles/app/layout/landing/parterAndSponsors.module.css
+++ b/styles/app/layout/landing/parterAndSponsors.module.css
@@ -1,3 +1,13 @@
-.sponsorLogos {
-	padding: 1.5rem;
+.logos {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 250px;
+	height: 100px;
+	padding: 1rem;
+
+	> img {
+		height: 100%;
+		width: auto;
+	}
 }
