--- a/styles/app/layout/footer.module.css
+++ b/styles/app/layout/footer.module.css
@@ -4,7 +4,7 @@
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
-	gap: 50px;
+	gap: 1rem;
 	margin: 2rem;
 	padding-top: 1.5rem;
 	border-top: 1px solid transparent;
