--- a/styles/app/components/sidebar/sidebar.module.css
+++ b/styles/app/components/sidebar/sidebar.module.css
@@ -78,7 +78,7 @@
 		}
 	}
 
-	header {
+	header nav {
 		width: 100%;
 		padding-bottom: 15px;
 		border-bottom: 1px solid transparent;
@@ -157,7 +157,8 @@
 		border: none;
 		display: none;
 
-		header {
+		header nav {
+			position: relative;
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
