review changes: updated link

--- a/styles/app/layout/landing/contact.module.css
+++ b/styles/app/layout/landing/contact.module.css
@@ -33,7 +33,7 @@
 					color: var(--color-primary);
 				}
 
-				a {
+				.twitter {
 					display: flex;
 					justify-content: center;
 					align-items: center;
