--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 :root {
-	--black: #1b1b1b;
 	/* Purple variants */
 	--purple-50: #f3e8ff;
 	--purple-100: #e0aaff;
@@ -83,8 +82,8 @@
 	--card-background: var(--purple-800);
 	--card-background-hover: var(--purple-850);
 
-	--github-card-backgroud: white;
-	--shadow: rgba(255, 255, 255, 0.5);
+	--github-card-background: var(--purple-100);
+	--github-card-text: var(--purple-900);
 }
 
 [data-theme='light'] {
@@ -127,8 +126,8 @@
 	--card-background: white;
 	--card-background-hover: white;
 
-	--github-card-backgroud: var(--black);
-	--shadow: rgba(0, 0, 0, 0.5);
+	--github-card-background: var(--purple-400);
+	--github-card-text: var(--purple-50);
 }
 
 * {
