--- a/styles/app/common/buttons.module.css
+++ b/styles/app/common/buttons.module.css
@@ -3,34 +3,39 @@
 	display: block;
 	padding: 0.4rem 1.5rem;
 	border-radius: 0.5rem;
-	border: 3px solid transparent;
 	font-size: 1rem;
 	text-align: center;
+	transition: all 0.3s ease;
 
 	&Primary {
 		width: 100%;
-		color: var(--color-btn-text);
-		background: var(--color-primary);
+		color: white;
+		background: var(--btn-gradient);
 		font-size: 1rem;
 		font-weight: 700;
+		padding: 0.6rem 1.5rem;
 
 		&:hover {
-			background: var(--color-btn-background);
-			border: 3px solid var(--color-btn-background);
+			box-shadow: var(--btn-shadow);
 		}
 	}
 
 	&Secondary {
 		width: 100%;
 		color: var(--color-link);
-		background: var(--color-background);
-		border: 3px solid var(--color-link);
+		border: 3px solid transparent;
+		background-image: linear-gradient(
+				var(--color-background),
+				var(--color-background)
+			),
+			var(--btn-gradient);
+		background-origin: border-box;
+		background-clip: padding-box, border-box;
 		font-size: 1rem;
 		font-weight: 700;
 
 		&:hover {
-			background: var(--switch-background);
-			color: var(--color-text);
+			box-shadow: var(--btn-shadow);
 		}
 	}
 
