feat(app): refacto landing - add sponsors (#501)

--- a/styles/app/common/card.module.css
+++ b/styles/app/common/card.module.css
@@ -1,9 +1,9 @@
 @keyframes gradient-rotate {
 	from {
-		transform: rotate(0deg);
+		transform: rotate(0deg) scale(2);
 	}
 	to {
-		transform: rotate(360deg);
+		transform: rotate(360deg) scale(2);
 	}
 }
 
