--- a/styles/app/components/sidebar/sidebar.module.css
+++ b/styles/app/components/sidebar/sidebar.module.css
@@ -7,6 +7,15 @@
 	}
 }
 
+.logoLink {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	font-size: 1.6rem;
+	color: var(--color-link);
+}
+
 .sidebar {
 	container: sidebar / size;
 	position: relative;
@@ -69,20 +78,11 @@
 		}
 	}
 
-	header {
+	header nav {
 		width: 100%;
 		padding-bottom: 15px;
 		border-bottom: 1px solid transparent;
 		border-image: var(--separator);
-
-		.logoLink {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			gap: 10px;
-			font-size: 1.6rem;
-			color: var(--color-link);
-		}
 	}
 
 	footer {
@@ -157,7 +157,8 @@
 		border: none;
 		display: none;
 
-		header {
+		header nav {
+			position: relative;
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
