--- a/styles/app/layout/footer.module.css
+++ b/styles/app/layout/footer.module.css
@@ -4,9 +4,9 @@
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
-	gap: 50px;
-	margin: 40px;
-	padding-top: 40px;
+	gap: 1rem;
+	margin: 2rem;
+	padding-top: 1.5rem;
 	border-top: 1px solid transparent;
 	border-image: linear-gradient(
 			90deg,
