--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,7 +43,8 @@
 	--color-btn-disabled-text: var(--grey-100);
 
 	--btn-gradient: linear-gradient(203deg, var(--purple-300), var(--purple-500));
-	--btn-shadow: rgba(90, 24, 154, 0.5) 0px 0px 10px 0px,
+	--btn-shadow:
+		rgba(90, 24, 154, 0.5) 0px 0px 10px 0px,
 		rgba(182, 111, 239, 0.5) 0px 0px 20px 0px;
 
 	--color-input-background: #eaeaea;
