--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
 	/* Purple variants */
 	--purple-50: #f3e8ff;
@@ -60,29 +61,24 @@
 
 	--color-logo: white;
 
-	--separator: linear-gradient(
-			90deg,
+	--separator: linear-gradient(90deg,
 			transparent,
 			var(--color-separator),
-			transparent
-		)
-		1;
+			transparent) 1;
 
 	--card-border: var(--purple-700);
-	--card-border-hover: conic-gradient(
-		var(--purple-500),
-		var(--purple-500),
-		var(--purple-600),
-		var(--purple-700),
-		var(--purple-600),
-		var(--purple-500),
-		var(--purple-500),
-		var(--purple-600),
-		var(--purple-700),
-		var(--purple-600),
-		var(--purple-500),
-		var(--purple-500)
-	);
+	--card-border-hover: conic-gradient(var(--purple-500),
+			var(--purple-500),
+			var(--purple-600),
+			var(--purple-700),
+			var(--purple-600),
+			var(--purple-500),
+			var(--purple-500),
+			var(--purple-600),
+			var(--purple-700),
+			var(--purple-600),
+			var(--purple-500),
+			var(--purple-500));
 	--card-background: var(--purple-800);
 	--card-background-hover: var(--purple-850);
 
@@ -113,20 +109,18 @@
 	--color-logo: var(--purple-600);
 
 	--card-border: var(--grey-50);
-	--card-border-hover: conic-gradient(
-		var(--purple-100),
-		var(--purple-100),
-		var(--purple-50),
-		#fff,
-		var(--purple-50),
-		var(--purple-100),
-		var(--purple-100),
-		var(--purple-50),
-		#fff,
-		var(--purple-50),
-		var(--purple-100),
-		var(--purple-100)
-	);
+	--card-border-hover: conic-gradient(var(--purple-100),
+			var(--purple-100),
+			var(--purple-50),
+			#fff,
+			var(--purple-50),
+			var(--purple-100),
+			var(--purple-100),
+			var(--purple-50),
+			#fff,
+			var(--purple-50),
+			var(--purple-100),
+			var(--purple-100));
 	--card-background: white;
 	--card-background-hover: white;
 
